Switched over to rendering with pug instead of static pug. Added routes.js.

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -2,7 +2,7 @@ extends templates/_layout
 
 block append page-params
 	-
-		title='Example Main Page';
+		title='Tennessee Land For Sale at TN Land';
 
 
 block header
@@ -10,7 +10,7 @@ block header
 	img(Src='/static/mountain-view.jpg')
 
 block content
-	p Replace me with real content.
+	p=textStuff
 	p: a(href='/subpage.html') Here's a sub-page.
 	P: a(href='/subpage-path/') Here's a sub-page built another way.
 
