--- a/pages/templates/_layout.pug
+++ b/pages/templates/_layout.pug
@@ -1,7 +1,7 @@
 //-This is where all the main layout for the page goes.
 block page-params
 	-
-		var title='Default page title';
+		//var title='Default page title';
 
 html
 	head
