Added font-awesome and continued work on the footer

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -1,3 +1,6 @@
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/font-awesome/scss/font-awesome.scss";
+
 body 
 	background : #000
 	color      : #fff
@@ -18,4 +21,40 @@ a:hover
 	color : #ff4
 
 img
-	max-width : 100%
+	max-width : 100% 
+
+.fa 
+  margin-right: 5px  
+
+.icons
+  padding: 0px
+
+.spacing
+  margin-top: 20px    
+
+.footerDiv
+  color: #fff
+
+.footerDiv h4
+  font-size: 22px
+  margin-bottom: 10px  
+
+.white a 
+  color: #fff !important 
+  font-size: 16px
+
+hr
+  color: #ddd
+  border-top: 1px solid #ddd
+  margin-top: 10px
+  margin-bottom: 10px
+
+.noMargin
+  margin: 0px  
+
+.footerBottom
+  margin-top: 50px
+  font-size: 14px  
+
+.floatRight
+  float: right  
