--- a/pages/templates/_layout.pug
+++ b/pages/templates/_layout.pug
@@ -5,6 +5,8 @@ block page-params
 
 html
 	head
+		link(rel='icon' href='/static/favicon.ico')
+		meta(charset="utf-8")
 		block title
 			title=title
 
