Progress on footer.

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -1,9 +1,17 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
-@import "../../node_modules/font-awesome/scss/font-awesome.scss";
+@import "../../node_modules/bootstrap/scss/bootstrap"
+@import "../../node_modules/font-awesome/scss/font-awesome.scss"
 
-body 
-	background : #000
-	color      : #fff
+// body 
+// 	background : #000
+// 	color      : #fff
+
+body
+  background: url(../static/open-field.jpg) no-repeat top left, #f7f7f7;
+  color                  : #000;
+  font-family            : 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-size              : 18px;
+  line-height            : 1.4
+  -webkit-font-smoothing : antialiased
 
 h1 
 	color : rgba(200,225,125, 1)
@@ -32,8 +40,12 @@ img
 .spacing
   margin-top: 20px    
 
+#footerMain
+  background-color: #000
+
 .footerDiv
   color: #fff
+  padding-top: 25px
 
 .footerDiv h4
   font-size: 22px
@@ -42,6 +54,9 @@ img
 .white a 
   color: #fff !important 
   font-size: 16px
+
+#returnWhite
+  color: #fff !important  
 
 hr
   color: #ddd
@@ -52,9 +67,10 @@ hr
 .noMargin
   margin: 0px  
 
-.footerBottom
+.footerTopBottom
   margin-top: 50px
-  font-size: 14px  
+  font-size: 14px 
+  padding-bottom: 25px   
 
 .floatRight
   float: right  
