--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -40,6 +40,39 @@ img
 .spacing
   margin-top: 20px    
 
+#topHeaderImage
+  background-image: url(../static/mountain-river-view-boots.jpg)
+  color: white
+
+#navbarMain a  
+  color: #fff !important
+
+#title
+  display: block
+  font-size: 42px
+  font-variant: small-caps
+  text-shadow: 2px 2px 4px #444
+  margin-left: 20px
+
+#phone
+  display: block
+  font-size: 36px
+  font-style: italic
+  font-weight: bold
+  font-variant: small-caps
+  text-shadow: 2px 2px 4px #444
+  float: right
+
+#tagline
+  font-family: georgia
+  font-variant: small-caps
+  font-size: 1.4rem
+  text-shadow: 2px 2px 4px #333
+  margin-left: 20px
+
+.navbar
+  height: 92px  
+
 #footerMain
   background-color: #000
 
