Fixed Bootstrap4 imports and made progress on dropdown-items.

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -42,7 +42,12 @@ img
 
 #topHeaderImage
   background-image: url(../static/mountain-river-view-boots.jpg)
-  color: white
+  color: #fff
+
+.dropdown-item:hover
+  color: #fff !important
+  background-color: #c79530 !important
+
 
 #navbarMain a  
   color: #fff !important
@@ -73,6 +78,24 @@ img
 .navbar
   height: 92px  
 
+.navFontBig
+  font-weight: bold
+  line-height: 22px 
+  font-size: 15px
+
+.navFontSmall
+  font-size: 10px  
+
+.noPad
+  padding-left: 0px
+  padding-right: 0px
+
+.margin-left
+  margin-left: 5px  
+
+.margin-right
+  margin-right: 5px  
+
 #footerMain
   background-color: #000
 
@@ -87,6 +110,9 @@ img
 .white a 
   color: #fff !important 
   font-size: 16px
+
+.orange
+  background-color: #D9A432 !important
 
 #returnWhite
   color: #fff !important  
