Removed fluid to stay true to the original.

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -6,7 +6,7 @@ block append page-params
 
 
 block header
-  div(class='container-fluid')
+  div(class='container')
     // The site title/banner at the top of the header.
     div(class='white row' id='topHeaderImage')
       div(class='col-md-8 col-sm-12')
@@ -117,7 +117,6 @@ block header
         a(class='white' href='http://www.tnland.com/land-guide/') FREE - Order a Tennessee Land Guide
         p: a(class='white' href='http://www.tnland.com/land-guide/') (A full color guide with property descriptions and prices)
 
-// Middle Content of the Site
 block content
   div(class='container')
     p=textStuff
