--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -108,10 +108,10 @@ img
 .noPad
   padding-left: 0px
   padding-right: 0px
-  margin-top: 10px 
-  margin-bottom: 5px
-  margin-left: 5px
-  margin-right: 5px
+  // margin-top: 10px 
+  // margin-bottom: 5px
+  // margin-left: 5px
+  // margin-right: 5px
   text-align: center
 
 #footerMain
