--- a/pages/index.pug
+++ b/pages/index.pug
@@ -4,7 +4,6 @@ block append page-params
   -
     title='Tennessee Land For Sale at TN Land';
 
-
 block header
   div(class='container')
     // The site title/banner at the top of the header.
@@ -116,15 +115,39 @@ block header
       div(id='mobile-landguide' class='container col-sm-12 col-xs-12 d-md-none')
         a(class='white' href='http://www.tnland.com/land-guide/') FREE - Order a Tennessee Land Guide
         p: a(class='white' href='http://www.tnland.com/land-guide/') (A full color guide with property descriptions and prices)
-
 block content
-  div(class='container')
-    p=textStuff
-    p: a(href='/subpage.html') Here's a sub-page.
-    p: a(href='/subpage-path/') Here's a sub-page built another way.
-    ul
-      li First
-      li Second
+  div(class='container' id='mainContent')
+    // Separate out the page into 8/4 columns for Bootstrap
+    div(class='row')
+      // Featured Locations
+      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
+        a(href='http://www.tnland.com/land/homesite-for-sale-next-to-a-waterfall/')
+          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2013/08/jh148-water-fall.jpg')
+          b
+            p(class='contentText') Beautiful Tennessee Mountain Homesite Next to a Waterfall
+
+      // Jasper Highlands
+      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
+        img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2015/04/JH-catskill.jpg')
+        p A beautiful gated mountain community with spacious mountain homesites, river views, waterfalls, creeks, and trails - 
+          b
+            a(href='https://www.jasperhighlands.com/' class='contentText') Jasper Highlands
+
+      // Free Guide
+      div(class='col-lg-4 col-xl-4 d-none d-xl-block')
+        img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
+
+      // Sunsets
+      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
+        i
+          b
+            a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/')
+              p(class='contentText') Tennessee Land For Sale With Incredible Sunset...
+        img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br2-mtns-land-pasture-tn.jpg')    
+        p This incredible, and very private 40 acres features a variety of natural mountain features and would make a great …
+          a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/') 
+           span(class='orangeText') [Read More...]
+
 
 block footer
   div(id='footerMain')
@@ -185,7 +208,7 @@ block footer
 
       div(class='row footerTopBottom')
         div(class='col-md-6')
-          a(id='returnWhite' href='#') ^ Return to Top 
+          a(class='white' href='#') ^ Return to Top 
 
         div(class='col-md-6')
           p(class='noMargin floatRight') TN Land Realty, LLC, Broker
