Bootstrap grid changes.

--- a/pages/css/stylesheet.sass
+++ b/pages/css/stylesheet.sass
@@ -96,8 +96,8 @@ img-mobile
   padding-bottom: 600px
   margin-bottom: 50px
 
-.mycontent-left 
-  border-right: 1px solid $lightShadow;
+.inline 
+  display: inline-block
 
 #mobile-landguide
   background-color: $green     
