--- a/pages/index.pug
+++ b/pages/index.pug
@@ -119,34 +119,49 @@ block content
   div(class='container' id='mainContent')
     // Separate out the page into 8/4 columns for Bootstrap
     div(class='row')
-      // Featured Locations
-      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
-        a(href='http://www.tnland.com/land/homesite-for-sale-next-to-a-waterfall/')
-          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2013/08/jh148-water-fall.jpg')
-          b
-            p(class='contentText') Beautiful Tennessee Mountain Homesite Next to a Waterfall
+      div(class='col-md-8 col-lg-8')
 
-      // Jasper Highlands
-      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
-        img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2015/04/JH-catskill.jpg')
-        p A beautiful gated mountain community with spacious mountain homesites, river views, waterfalls, creeks, and trails - 
-          b
-            a(href='https://www.jasperhighlands.com/' class='contentText') Jasper Highlands
+        // Featured Locations
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+          a(href='http://www.tnland.com/land/homesite-for-sale-next-to-a-waterfall/')
+            img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2013/08/jh148-water-fall.jpg')
+            b
+              p(class='contentText') Beautiful Tennessee Mountain Homesite Next to a Waterfall
 
-      // Free Guide
-      div(class='col-lg-4 col-xl-4 d-none d-xl-block')
-        img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
+        // Jasper Highlands
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+          img(class='img img-responsive' src='http://cdn3.tnland.com/wp-content/uploads/2015/04/JH-catskill.jpg')
+          p A beautiful gated mountain community with spacious mountain homesites, river views, waterfalls, creeks, and trails - 
+            b
+              a(href='https://www.jasperhighlands.com/' class='contentText') Jasper Highlands
 
-      // Sunsets
-      div(class='col-lg-4 col-xl-4 col-md-4 col-sm-12 col-xs-12')
-        i
-          b
-            a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/')
-              p(class='contentText') Tennessee Land For Sale With Incredible Sunset...
-        img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br2-mtns-land-pasture-tn.jpg')    
-        p This incredible, and very private 40 acres features a variety of natural mountain features and would make a great …
-          a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/') 
-           span(class='orangeText') [Read More...]
+        // Sunsets
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+          i
+            b
+              a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/')
+                p(class='contentText') Tennessee Land For Sale With Incredible Sunset...
+          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br2-mtns-land-pasture-tn.jpg')    
+          p This incredible, and very private 40 acres features a variety of natural mountain features and would make a great …
+            a(href='http://www.tnland.com/land/tn-land-for-sale-sunset-views/') 
+            span(class='orangeText') [Read More...]
+
+        // Over 180 Acres of TN Mtn Land With...
+        div(class='col-lg-6 col-xl-6 col-md-6 col-sm-6 col-xs-6 inline')
+          i
+            b
+              a(href='http://www.tnland.com/land/large-tennessee-acreage-character/')
+                p(class='contentText') Over 180 Acres Of Tennessee Mountain Land With…
+          img(class='img img-responsive' src='http://cdn.tnland.com/wp-content/uploads/2014/08/br1-clouds-mtns.jpg')    
+          p This large acreage Tennessee mountain property has it all. Incredible sunsets, deep forest, rolling pasture, and unique rock …
+            a(href='http://www.tnland.com/land/large-tennessee-acreage-character/') 
+            span(class='orangeText') [Read More...]
+
+      div(class='col-md-4 col-lg-4')   
+        // Free Guide
+        div(class='col-lg-12 col-xl-12 d-none d-xl-block')
+          img(class='img img-responsive' src='http://www.tnland.com/wp-content/themes/tnland1140/images/home/land-guide-short-formd.png')
+   
 
 
 block footer
